--- a/.github/workflows/multiOSReleases.yml
+++ b/.github/workflows/multiOSReleases.yml
@@ -166,7 +166,7 @@ jobs:
         with:
           retention-days: 1
           if-no-files-found: error
-          name: ${{ matrix.file_suffix }}signed
+          name: stirling-${{ matrix.file_suffix }}signed
           path: |
             ./*
             !cosign.*
@@ -357,4 +357,4 @@ jobs:
           tag_name: v${{ needs.read_versions.outputs.version }}
           generate_release_notes: true
           files: |
-            ./*
+            ./*signed/*
