--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -7,10 +7,7 @@
 #
 # Source repository: https://github.com/actions/dependency-review-action
 name: 'Dependency Review'
-on:
-  push:
-    branches: ["main"]
-  pull_request:
+on: [pull_request]
 
 permissions:
   contents: read
