--- a/.github/workflows/codeql_javascript.yml
+++ b/.github/workflows/codeql_javascript.yml
@@ -15,9 +15,9 @@ on:
   push:
     branches: ["main"]
     paths:
-      - "*.js"
-      - "*.html"
-      - "*.htm"
+      - "**/*.js"
+      - "**/*.html"
+      - "**/*.htm"
   pull_request:
     # The branches below must be a subset of the branches above
     branches: ["main"]
