--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -12,7 +12,7 @@ jobs:
   ############################
   # BUILDING THE DOCUMENTATION
   ############################
-  build:
+  build-doc:
     runs-on: ubuntu-latest
     permissions:
       contents: write
