--- a/.github/workflows/releaseArtifacts.yml
+++ b/.github/workflows/releaseArtifacts.yml
@@ -9,7 +9,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-artifacts:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -71,7 +71,7 @@ jobs:
             ./build/libs/Stirling-PDF${{ matrix.file_suffix }}.*
 
   sign_verify:
-    needs: build
+    needs: build-artifacts
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -91,6 +91,7 @@ jobs:
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: binaries${{ matrix.file_suffix }}
+
       - name: Display structure of downloaded files
         run: ls -R
 
@@ -147,7 +148,7 @@ jobs:
             ./launch4j/Stirling-PDF-Server${{ matrix.file_suffix }}.*
 
   release:
-    needs: [build, sign_verify]
+    needs: [build-artifacts, sign_verify]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -168,7 +169,7 @@ jobs:
       - name: Upload binaries, attestations and signatures to Release and create GitHub Release
         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974 # v2.1.0
         with:
-          tag_name: v${{ needs.build.outputs.version }}
+          tag_name: v${{ needs.build-artifacts.outputs.version }}
           generate_release_notes: true
           files: |
             ./libs/Stirling-PDF*
