--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -2,8 +2,6 @@ name: "Pull Request Labeler"
 on:
   pull_request_target:
     types: [opened, synchronize]
-  pull_request:
-    types: [opened, synchronize]
 
 permissions:
   contents: read
@@ -20,8 +18,13 @@ jobs:
         with:
           egress-policy: audit
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
+
+      - name: Apply Labels
+        id: label-PR
+        uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/labeler-config.yml
           sync-labels: true
+
+      -  run: echo "all-labels=$(echo ${{ steps.label-PR.outputs.all-labels }})" >> $GITHUB_OUTPUT
