--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -6,6 +6,9 @@ on:
       - main
     paths:
       - "build.gradle"
+  pull_request_target:
+    paths:
+      - "build.gradle"
 
 permissions:
   contents: read
