--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -81,7 +81,7 @@ jobs:
         if: env.pr_exists == 'true' && env.CHANGES_DETECTED == 'true'
         run: |
           gh pr comment ${{ env.pr_number }} --body "The PR has been updated with new changes."
-          gh pr update ${{ env.pr_number }} --title "Update 3rd Party Licenses (Updated)"
+          gh pr update ${{ env.pr_number }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
