--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -85,11 +85,18 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - run: |
+          echo "PR author: ${{ github.event.pull_request.user.login }}"
+
       - name: Merge PR
         run: |
-          curl -X PUT -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d '{"commit_title": "Automated Merge", "commit_message": "Automated merge by bot", "merge_method": "squash"}' \
-          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge"
+          curl -L \
+          -X PUT \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
+          -d '{'{"commit_title": "Automated Merge", "commit_message": "Automated merge by bot"}'
 
       # - name: Genehmige und merge PR automatisch
       #   if: env.pr_exists == 'true' && env.CHANGES_DETECTED == 'true'
