--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -93,7 +93,7 @@ jobs:
           curl -L \
           -X PUT \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/merge \
           -d '{"commit_title": "Automated Merge", "commit_message": "Automated merge by bot"}'
