--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -94,6 +94,6 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           /repos/${{ github.repository }}/merges \
-          -f "base=master" -f "head=cool_feature" -f "commit_message=Shipped cool_feature!"
+          -f "base=main" -f "head=update-3rd-party-licenses" -f "commit_message=Shipped cool_feature!"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
