--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Wait for status check to pass
         run: |
-          gh pr checks --repo ${{ github.repository }} --pr ${PR_NUMBER} --wait
+          gh pr checks --repo ${{ github.repository }} ${PR_NUMBER}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
