--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches:
       - "main"
+  pull_request_target:
+  workflow_run:
+    workflows: ["License Report Workflow"]
+    types:
+      - completed
 
 permissions:
   contents: read
@@ -113,3 +118,21 @@ jobs:
           # chmod +x ./cucumber/test_webpages.sh
           chmod +x ./test.sh
           ./test.sh
+
+  squash-merge-pr:
+    if: ${{ success() }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Squash Merge PR
+        run: |
+          PR_NUMBER=$(gh pr list --state open --head ${{ github.repository }} --json number -q ".[0].number")
+          if [ -n "$PR_NUMBER" ]; then
+            gh pr merge $PR_NUMBER --squash --delete-branch --merge
+          else
+            echo "No open PR found to merge."
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
