--- a/.github/workflows/licenses-update.yml
+++ b/.github/workflows/licenses-update.yml
@@ -77,6 +77,9 @@ jobs:
 
       - run: echo ${{ steps.cpr.outputs.pull-request-operation }}
 
+      - name: Set PR Number as Output
+        run: echo "PR_NUMBER=${{ steps.cpr.outputs.pull-request-number }}" >> $GITHUB_ENV
+
       # - run: echo ${{ github.event.action }}
 
       # - name: Auto approve
