--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,6 +121,7 @@ jobs:
 
   squash-merge-pr:
     if: ${{ github.event.workflow_run.workflow == 'License Report Workflow' && success() }} # Nur ausführen, wenn der Workflow "License Report Workflow" abgeschlossen ist
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
