--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,8 +120,8 @@ jobs:
           ./test.sh
 
   squash-merge-pr:
-    if: ${{ github.event.workflow_run.workflow == 'License Report Workflow' && success() }} # Nur ausführen, wenn der Workflow "License Report Workflow" abgeschlossen ist
-    needs: [build, docker-compose-tests]
+    if: ${{ github.event.workflow_run.workflow == 'License Report Workflow'}} # Nur ausführen, wenn der Workflow "License Report Workflow" abgeschlossen ist
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
