--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches:
       - "main"
-  pull_request_target:
+  # pull_request_target:
   workflow_run:
     workflows: ["License Report Workflow"]
     types:
